# sollertia-shared-assets

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tox.ini
docs/source/: api.rst  conf.py  welcome.rst
envs/: slsa_dev_lin.yml  slsa_dev_lin_spec.txt  slsa_dev_osx.yml  slsa_dev_osx_spec.txt  slsa_dev_win.yml  slsa_dev_win_spec.txt
src/sl_shared_assets/: __init__.py
src/sl_shared_assets/configuration/: __init__.py  configuration_utilities.py  mesoscope_configuration.py
src/sl_shared_assets/data_classes/: __init__.py  dataset_data.py  runtime_data.py  session_data.py
src/sl_shared_assets/interfaces/: configure.py  mcp_server.py
src/sollertia_shared_assets/: __init__.py  __init__.pyi  credentials.py  credentials.pyi  enums.py  enums.pyi  registries.py  registries.pyi
src/sollertia_shared_assets/configuration/: __init__.py  __init__.pyi  configuration_utilities.py  configuration_utilities.pyi  experiment_configuration.py  experiment_configuration.pyi  mesoscope_configuration.py  mesoscope_configuration.pyi  server_configuration.py  vr_configuration.py  vr_configuration.pyi
src/sollertia_shared_assets/data_classes/: __init__.py  __init__.pyi  dataset_data.py  dataset_data.pyi  extensions.py  mesoscope_runtime_data.py  project_hierarchy.py  project_hierarchy.pyi  read_assets.py  runtime_data.py  runtime_data.pyi  session_data.py  session_data.pyi  session_discovery.py  session_discovery.pyi  surgery_data.py  surgery_data.pyi
src/sollertia_shared_assets/data_hierarchy/: __init__.py  __init__.pyi  dataset_data.py  dataset_data.pyi  project_hierarchy.py  project_hierarchy.pyi  session_data.py  session_data.pyi  session_discovery.py  session_discovery.pyi
src/sollertia_shared_assets/interfaces/: __init__.py  cli.py  cli.pyi  configuration_tools.py  configuration_tools.pyi  configure.py  configure.pyi  data_tools.py  data_tools.pyi  mcp_instance.py  mcp_instance.pyi  mcp_server.py  mcp_server.pyi  unity_tools.py  unity_tools.pyi
src/sollertia_shared_assets/mesoscope_vr/: __init__.py  __init__.pyi  experiment_configuration.py  experiment_configuration.pyi  raw_data.py  raw_data.pyi  runtime_data.py  runtime_data.pyi
tests/: __init__.py  configuration_test.py  conftest.py  credentials_test.py  data_classes_test.py  enums_test.py  registries_test.py  session_discovery_test.py
tests/configuration/: configuration_utilities_test.py  experiment_configuration_test.py  mesoscope_configuration_test.py  vr_configuration_test.py
tests/data_classes/: extensions_test.py  mesoscope_runtime_data_test.py  project_hierarchy_test.py  runtime_data_test.py  session_data_test.py  session_discovery_test.py  surgery_data_test.py
tests/data_hierarchy/: dataset_data_test.py  project_hierarchy_test.py  session_data_test.py  session_discovery_test.py
tests/mesoscope_vr/: mesoscope_experiment_configuration_test.py  raw_data_test.py  runtime_data_test.py
